--- a/todo
+++ b/todo
@@ -1,3 +1,3 @@
-- Debug the drag method
+- Add entity's
 - Change the brightness system so it's based on tick rate
 - Hade a better way for the window size
